--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Martin Damovský a Markéta Popková - Svatba 19.9.2015</title>
+    <title>Martin Damovský a Markéta Popková - Svatba 19.9.2015!!!</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
