--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ Milí, přátelští, nenápadní a vždy na správném místě, aby zachytili k
             <div class="row">
 
 <p>            
-<strong>Foto od Fotografa</strong> - Pavel s Moňou nám již zaslali první ochutnávku fotek, najdete je <a href="https://www.dropbox.com/sh/bs6tpi9yie8rtag/AACPqmpAKqDHkdc5bSf8FVmPa?dl=0" target="_blank">zde</a>
+<strong>Foto od Fotografa</strong> - Pavel s Moňou nám již zaslali první ochutnávku fotek, najdete je <a href="http://backovi.pixieset.com/svatba-marketa-martin/" target="_blank">zde (klikněte na "Enter as Guest")</a>
 </p>
 
 <p>            
